# mcp-server-obsidian-jsoncanvas

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  mcp_server.py  pyproject.toml  server.json  simple_mcp_server.py  simple_test.py  test_imports.py  test_server_api.py
.context/: .gitignore  index.md
.github/workflows/: ci.yml
EXAMPLE OUTPUT/: 2025-03-03-austin_langchain_aimug.canvas  2025-03-03-bears_of_the_world.canvas  2025-03-03-cavapoos_guide.canvas  2026-05-21-ai-agent-architecture-2026.canvas  2026-05-21-ai-timeline-2024-2026.canvas  2026-05-21-frontier-ai-may-2026.canvas
docs/: png-export-spec.md
examples/: create_canvas.py
jsoncanvas/: __init__.py  __main__.py  _colors.py  canvas.py  edges.py  errors.py  export.py  nodes.py  server.py
jsoncanvas/_ui/: viewer.html
tests/: test_canvas.py  test_edges.py  test_export.py  test_nodes.py  test_server.py
ui/: package-lock.json  package.json  preview.html  tsconfig.json  viewer.html  vite.config.ts
ui/src/: main.ts  preview.ts  render.ts  styles.css
