[project]
name = "mcp-server-jsoncanvas"
version = "0.1.0"
description = "MCP server for working with JSON Canvas files"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp>=1.2.0",
    "jsonschema>=4.20.0",
    "pillow>=10.1.0",  # For image export functionality
    "svgwrite>=1.4.3",  # For SVG export functionality
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/yourusername/mcp-server-jsoncanvas"
Repository = "https://github.com/yourusername/mcp-server-jsoncanvas.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jsoncanvas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
