[project]
name = "mcp-server-jsoncanvas"
version = "0.2.0"
description = "MCP server for working with JSON Canvas files"
authors = [
    {name = "Cameron Rohn", email = "cameron@cameronrohn.com"},
]
dependencies = [
    "mcp>=1.27.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mcp-server-jsoncanvas = "jsoncanvas.server:main"

[project.urls]
Homepage = "https://github.com/Cam10001110101/obsidian-jsoncanvas"
Repository = "https://github.com/Cam10001110101/obsidian-jsoncanvas.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jsoncanvas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
